# robopy

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  README_EN.md  demo_realsense.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_realsense.py
.github/workflows/: pre-commit.yml  static.yml
REALSENSE_CAMERA/: index.html
api/config/: index.html
api/kinematics/: index.html
api/robots/: index.html
api/sensors/: index.html
api/spacemouse/: index.html
api/utils/: index.html
changelog/: index.html
developer/development/: index.html
docs/: REALSENSE_CAMERA.md  changelog.md  index.md
docs/api/: config.md  kinematics.md  robots.md  sensors.md  spacemouse.md  utils.md
docs/developer/: development.md
docs/experiments/: data-collection.md  handlers.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: extra.js
docs/robots/: koch.md  rakuda.md  so101.md  xarm.md
docs/sensors/: cameras.md  tactile.md
docs/stylesheets/: extra.css
docs/utils/: animation.md  data-handling.md
examples/: debug_spacemouse.py  demo_realsense.py  demo_spacemouse.py
examples/data_process/: h5_format_usage.py  read_h5.py
examples/exp_handler/: record.py  test_exp_handler.py
examples/robot/: rakuda_teleoperate.py  test_xarm_control.py  xarm_sim_teleop.py  xarm_spacemouse_teleop.py  xarm_teleoperate.py
experiments/data-collection/: index.html
experiments/handlers/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
robots/koch/: index.html
robots/rakuda/: index.html
robots/so101/: index.html
robots/xarm/: index.html
search/: search_index.json
sensors/cameras/: index.html
sensors/tactile/: index.html
src/dynamixelpy/config/: global_config.py
src/dynamixelpy/config/visual_config/: camera_config.py
src/dynamixelpy/utils/: find_usb_port.py
src/dynamixelpy/visual/: camera.py  realsense_camera.py  web_camera.py
src/robopy/: __init__.py
src/robopy/config/: __init__.py  dotrobopy.py  types.py
src/robopy/config/input_config/: __init__.py  spacemouse_config.py
src/robopy/config/robot_config/: __init__.py  koch_config.py  rakuda_config.py  so101_config.py  xarm_config.py
src/robopy/config/sensor_config/: __init__.py  params_config.py  sensors.py
src/robopy/config/visual_config/: camera_config.py
src/robopy/input/: __init__.py  spacemouse.py
src/robopy/kinematics/: __init__.py  chain.py  ee_pose.py  ik_solver.py  robot_chains.py  transforms.py
src/robopy/motor/: control_table.py  controll_table.py  dynamixel_bus.py  feetech_bus.py  feetech_control_table.py
src/robopy/robots/: __init__.py
src/robopy/robots/common/: __init__.py  arm.py  composed.py  robot.py
src/robopy/robots/koch/: __init__.py  calibration.py  koch_follower.py  koch_leader.py  koch_pair_sys.py  koch_robot.py
src/robopy/robots/rakuda/: __init__.py  rakuda_arm.py  rakuda_follower.py  rakuda_leader.py  rakuda_pair_sys.py  rakuda_robot.py
src/robopy/robots/so101/: __init__.py  calibration.py  so101_follower.py  so101_leader.py  so101_pair_sys.py  so101_robot.py  so101_spacemouse.py
src/robopy/robots/xarm/: __init__.py  sim_xarm_follower.py  spacemouse_agent.py  xarm_arm.py  xarm_follower.py  xarm_kinematics.py  xarm_leader.py  xarm_pair_sys.py  xarm_robot.py
src/robopy/sensors/: __init__.py
src/robopy/sensors/audio/: __init__.py  audio_sensor.py
src/robopy/sensors/common/: sensor.py
src/robopy/sensors/tactile/: __init__.py  digit_sensor.py
src/robopy/sensors/visual/: __init__.py  camera.py  realsense_camera.py  utils.py  web_camera.py
src/robopy/utils/: __init__.py  animation_maker.py  blosc_handler.py  h5_handler.py
src/robopy/visual/: camera.py  realsense_camera.py  web_camera.py
stylesheets/: extra.css
tests/: debug_gello.py  test_audio_sensor.py  test_data_saving.py  test_hardware_free_kinematics.py  test_koch.py  test_port.py  test_rakuda_send_action.py  test_rakuda_sensors.py  test_rakuda_torque_config.py  test_rakuda_with_audio.py  test_realsense.py  test_saver.py  test_so101.py  test_so101_spacemouse.py  test_synchronized_collection.py  test_xarm.py  test_xarm_control.py
tests/test_exp/: test_exp_handler.py
tests/test_kinematics/: test_chain.py  test_ik_solver.py  test_robot_chains.py  test_transforms.py
tests/test_rakuda/: demo_30hz_performance.py  test_integration.py  test_rakuda_integration.py  test_rakuda_record.py  test_rakuda_robot.py  test_record.py  test_teleoperate.py
tests/test_spacemouse/: conftest.py  test_spacemouse_controller.py  test_spacemouse_reader.py
utils/animation/: index.html
utils/data-handling/: index.html
(+13 files in other folders)
