[project]
name = "robopy"
version = "0.3.3"
description = "A Python library for controlling robots with Dynamixel and Feetech actuators and Intel RealSense cameras."
readme = "README.md"
authors = [{ name = "tetsugo", email = "tetsugou2002@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "blosc2>=3.8.0",
    "digit-interface>=0.2.1",
    "dynamixel-sdk>=3.7.31",
    "h5py>=3.15.1",
    "imageio>=2.37.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=1.26.0",
    "opencv-python>=4.10",
    "pyaudio>=0.2.14",
    "pyquaternion>=0.9.9",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "feetech-servo-sdk>=1.0.0",
    "tqdm>=4.67.1",
    "xarm-python-sdk>=1.17.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "pre-commit>=4.0.1",
    "codespell>=2.2.6",
    "types-pyserial>=3.5.0.20251001",
    "h5py-stubs>=0.1.2",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
gello = [
    "dm-control>=1.0.39",
    "mujoco>=3.7.0",
    "numpy>=2.2.6",
    "tyro>=1.0.13",
    "zmq>=0.0.0",
]
spacemouse = ["pyspacemouse>=0.0.7"]
linux = ["pyrealsense2>=2.54.2"]                         # Linux専用依存
spacemouse = ["pyspacemouse>=1.0.8"]                     # SpaceMouse テレオペ用

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.uv_build]
package = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]

[tool.ruff]
line-length = 100
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I"]
ignore = [
    "CPY",
    "D100",
    "D107",
    "T201",
    "D400",
    "D415",
    "INP001",
    "ERA001",
    "RET504",
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv"]
